fix scrollbar jumping

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,10 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap");
 
+html {
+  margin-left: calc(100vw - 100%);
+}
+
 body {
   @apply bg-primary dark:bg-black-primary font-rubik tracking-widest;
 }
